#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package Detector
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-03-02
2015-11-09 Christopher O'Grady
Update detector_factory documentation.  Clean up GlobalUtils
(alot of this code was moved to PSCalib).

Tag: V00-03-01
2015-11-09 Christopher O'Grady
Make remaining python in examples/ directory work.

Tag: V00-03-00
2015-11-09 TJ Lane
- PyDetector.py: detector_factory() functional, chooses correct PyDetector
from string
- New detectors: DdlDetector.py, EvrDetector.py, EpicsDetector.py and the Bld
(uses DdlDetector)
- No longer accept psana.Source in calls to psana.Detector (v00-03)

Tag: V00-02-05
2015-10-29 Mikhail S. Dubrovin
- AreaDetector.py and PyDetectorAccess.py - in methods indexes_x/y(...) and image(...) add parameter do_update=False (PSAS-139)
	
Tag: V00-02-04
2015-10-27 Mikhail S. Dubrovin
- PyDetectorAccess.py - improve pixel index arrays caching, update for new run (PSAS-139)

Tag: V00-02-03
2015-10-26 Mikhail S. Dubrovin
- PyDetectorAccess.py - apply cashing of index arrays in indexes_x/y(...) and image(...)
	previously it was done in PSCalib.GeometryAccess after searching of the top object, that takes time (PSAS-139)

Tag: V00-02-02
2015-10-26 Mikhail S. Dubrovin
- AreaDetector.py add protection in image(); return None if det.calib() is None (PSAS-139)

Tag: V00-02-01
2015-10-16 Mikhail S. Dubrovin
- split PyDetector.py in to AreaDetector.py and WFDetector.py, convert PyDetector.py to factory-class (PSAS-139)
- add ex_evt_keys.py, ex_time_fiducials.py

Tag: V00-01-13
2015-10-15 Mikhail S. Dubrovin
- add examples ex_time_fiducials.py, ex_evt_keys.py

Tag: V00-01-12
2015-10-14 Mikhail S. Dubrovin